# perceptron

./: .bumpversion.cfg  .gitignore  Cargo.toml  README.rst  pyproject.toml
perceptron/: __init__.py
perceptron-rs/: __init__.py
src/: dot.rs  exceptions.rs  lib.rs  perceptron.rs  sample.rs
tests/: test_perceptron.py
