[tool.poetry]
name = "perceptron-rs"
version = "0.1.4"
description = "A perceptron written in Rust, with bindings to Python."
authors = ["Thomas Breydo <tbreydo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
maturin = "^0.8.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
Sphinx = "^3.4.1"
mypy = "^0.790"
bump2version = "^1.0.1"

[build-system]
requires = ["maturin"]
build-backend = "maturin"
